<resources>
    <string name="app_name">Basica</string>
    <string name="action_settings">Settings</string>
    <string name="saludo">Saludo</string>
    <string name="click">Click</string>
    <string name="click_con_hora">hora</string>
    <string name="saludotostada">saludoTostada</string>
    <string name="saludotostadasnackbar">saludotostadasnackbar</string>
    <string name="amarillo">Amarillo</string>
    <string name="rojo">rojo</string>
    <string name="color">COLOR</string>
    <string name="internet">internet</string>¡
    <string name="volver">volver</string>

</resources>
